--- a/BookShopp/Views/Home/Index.cshtml
+++ b/BookShopp/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             </a>
         </div>
         <div class="col-md-4">
-            <a asp-action="Index" asp-controller="User" class="text-decoration-none">
+            <a asp-action="Index" asp-controller="Book" class="text-decoration-none">
                 <div class="card text-center shadow-lg p-4 border-0 rounded-4 custom-card-book">
                     <img src="images/5078755.png" alt="User Icon" class="user-icon">
                     <h3 class="mt-3 text-white fw-bold">Books</h3>
