--- a/BookShopp/Views/Shared/_Layout.cshtml
+++ b/BookShopp/Views/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
+        <nav class=" nav navbar navbar-expand-sm navbar-toggleable-sm  border-bottom box-shadow mb-3">
+            <div class="container-fluid nav ">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BookShopp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -20,9 +20,9 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a asp-action="Add" asp-controller="User" class="btn btn-success add-btn">Add</a>
-                    <a asp-action="Delete" asp-controller="User" class="btn btn-danger del-btn">Delete</a>
-                        <a asp-action="Update" asp-controller="User" class="btn btn-info del-btn">Edit</a>
+                            <a asp-action="Add" asp-controller="User" class="btn3">Add</a>
+                    <a asp-action="Delete" asp-controller="User" class="btn2">Delete</a>
+                        
                         </li>
                         
                     </ul>
@@ -47,3 +47,50 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+<style>
+    .navbar-brand{
+        color:white;
+
+    }
+    .navbar-brand:hover{
+        color:white;
+
+    }
+    .nav{
+        background-color:#0A97B0;
+
+
+    }
+    .btn2 {
+
+    background:#EB455F;
+    color: white;
+    border: none;
+    padding: 10px 32px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.3s;
+    text-decoration:none;
+     margin-top: 10px;
+
+    }
+     .btn3 {
+
+    background:#00DFA2;
+    color: white;
+    border: none;
+    padding: 10px 32px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.3s;
+    text-decoration:none;
+     margin-top: 10px;
+
+    }
+   
+    .btn2:hover{
+    color:white;}
+   
+</style>
