--- a/BookShopp/Views/User/Index.cshtml
+++ b/BookShopp/Views/User/Index.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "User";
 }
 <div class="container">
-        <h2 class="text-center mb-4 text-white">User List</h2>
+        <h2 class="text-center mb-4 text-black">User List</h2>
 
-        <div class="row g-4">
+        <div class="row g-4 ">
         @foreach (var item in Model)
         {
                     <div class="col-md-4 col-sm-6">
@@ -18,7 +18,7 @@
                                 </h5>
                                 <p class="card-text"><strong>Age:</strong> @item.Age</p>
                                 <p class="card-text"><strong>Email:</strong> @item.Gmail</p>
-                                     <a asp-action="Update" asp-controller="User" class="btn btn-info del-btn">Edit</a>   
+                                         <a asp-action="Edit" asp-controller="User" asp-route-id="@item.Id" class="btn1">Edit</a>   
                             </div>
                         </div>
                     </div>
@@ -29,6 +29,35 @@
 
 
     <style>
+        body{
+            background:#ACE2E1;
+        }
+        .card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+        .btn1 {
+
+    background: linear-gradient(to right, #1e90ff, #8a2be2);
+    color: white;
+    border: none;
+    padding: 10px 32px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.3s;
+    text-decoration:none;
+     margin-top: 10px;
+}
+
+.btn1:hover {
+    
+    transform: scale(1.05);
+    color:black;
+}
+
     .custom-card-user {
         background: linear-gradient(135deg, #1e90ff, #00c9a7);
         transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
@@ -42,8 +71,10 @@
         box-shadow: 0px 15px 30px rgba(30, 144, 255, 0.3);
     }
     .img{
-         width: 250px;
-        height: 320px;
+        border-radius: 20px;
+        width: 100%;
+        height: 380px;
+        object-fit: cover;
     }
     
     
