--- a/BookShopp/Views/Home/Index.cshtml
+++ b/BookShopp/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
             </a>
         </div>
         <div class="col-md-4">
-            <a asp-action="Index" asp-controller="User" class="text-decoration-none">
+            <a asp-action="Index" asp-controller="Course" class="text-decoration-none">
                 <div class="card text-center shadow-lg p-4 border-0 rounded-4 custom-card-course">
                     <img src="images/educational-video.png" alt="User Icon" class="user-icon">
                     <h3 class="mt-3 text-white fw-bold">Courses</h3>
