--- a/BookShopp/Views/Book/Index.cshtml
+++ b/BookShopp/Views/Book/Index.cshtml
@@ -17,10 +17,11 @@
                         <h5 class="card-title">
                             @item.Name @item.Author
                         </h5>
-                        <p class="card-text"><strong>Age:</strong> @item.Price</p>
-                        <p class="card-text"><strong>Email:</strong> @item.Pages</p>
-                        <p class="card-text"><strong>Email:</strong> @item.Description</p>
-                        <p class="card-text"><strong>Email:</strong> @item.Genre</p>
+                        <p class="card-text"><strong>Price:</strong> @item.Price</p>
+                        <p class="card-text"><strong>Pages:</strong> @item.Pages</p>
+                        <p class="card-text"><strong>Description:</strong> @item.Description</p>
+                        <p class="card-text"><strong>Genre:</strong> @item.Genre</p>
+                            <a asp-action="AddToCart" asp-route-id="@item.Id" asp-controller="Cart" class="up-btn">Add To Cart</a>
                         <a asp-action="Edit" asp-controller="Book" asp-route-id="@item.Id" class="btn1">Edit</a>
                     </div>
                 </div>
@@ -78,7 +79,7 @@
     .img {
         border-radius: 20px;
         width: 100%;
-        height: 380px;
+        height: 100%;
         object-fit: cover;
     }
 </style>
