--- a/BookShopp/Views/Course/Add.cshtml
+++ b/BookShopp/Views/Course/Add.cshtml
@@ -26,7 +26,10 @@
         <label asp-for="Price">Price</label>
         <input asp-for="Course.Price" class="form-control" required />
     </div>
-
+      <div class="form-group">
+        <label asp-for="Required_Skills">Required Skills</label>
+        <input asp-for="Course.Required_Skills" class="form-control" required />
+    </div>
     <div class="form-group">
         <label asp-for="Image">Profile Image URL</label>
         <input asp-for="Course.Image" class="form-control" />
